--- a/01-ping.yaml
+++ b/01-ping.yaml
@@ -1,6 +1,8 @@
-
 - name: ping the server
-  host: web
-  tasks:
+  hosts: web
+  tasks: #list of tasks/modules/collections
   - name: pinging the server
     ansible.builtin.ping:
+
+
+
