--- a/task.yaml
+++ b/task.yaml
@@ -11,3 +11,7 @@
       corse: "terraform"
     ansible.builtin.debug:
       msg: "hii, course name is {{course}} and trainer is {{trainer}} and duration is {{duration}}"
+
+- name: print information
+  ansible.builtin.debug:
+    msg: "hii, course name is {{course}} and trainer is {{trainer}} and duration is {{duration}}"
