--- a/prompt.yaml
+++ b/prompt.yaml
@@ -7,6 +7,7 @@
   - name: password
     prompt: enter the password
     private: false
+    tasks:
   - name: print the information
     ansible.builtin.debug:
       msg: "username is {{username}} password is {{password}}"   
