--- a/inventory.ini
+++ b/inventory.ini
@@ -1,13 +1,11 @@
 [web]
 172.31.27.124
 
-[localhost]
-localhost
 
 [localhost:vars]
-course: "devops"
-trainer: "siva"
-duration: "120hr"
+course="devops"
+trainer="siva"
+duration="120hr"
 
 [db]
 172.31.27.125
