--- a/condition.yaml
+++ b/condition.yaml
@@ -4,6 +4,7 @@
   - name: check the user exists or not
     ansible.builtin.command: id expense
     register: user
+    handle_error: true
   - name: check the user info
     ansible.builtin.debug:
       msg: "check the user info: {{user}}"
