--- a/condition.yaml
+++ b/condition.yaml
@@ -4,4 +4,8 @@
   tasks:
   - name: check the user exist or not
     ansible.builtin.command: id expense
-    
+    ignore_errors: true
+
+  - name: say hello
+    ansible.builtin.debug:
+      msg: "say hello"
