--- a/condition.yaml
+++ b/condition.yaml
@@ -14,8 +14,8 @@
   
   - name: create a user
     ansible.builtin.command: useradd expense
-    when: USER.rc ! = 0
-    
+    when: USER.RC ! = 0
+
   - name: say hello
     ansible.builtin.debug:
       msg: "say hello"
