--- a/condition.yaml
+++ b/condition.yaml
@@ -14,7 +14,7 @@
   
   - name: create a user
     ansible.builtin.command: useradd expense
-    when: USER.RC !=0
+    when: USER.rc !=0
 
   - name: say hello
     ansible.builtin.debug:
