--- a/05-condtions.yaml
+++ b/05-condtions.yaml
@@ -8,9 +8,9 @@
   - name: print the less than number
     ansible.builtin.debug:
       msg: "number is less than  {{NUMBER}}"
-    when: number < 10 
+    when: number | int < 10 
 
   - name: print the greater than is equal to
     ansible.builtin.debug:
       msg: "number is greater than equal to {{NUMBER}}"
-    when: number > 10
+    when: number | int >= 10
