--- a/05-condtions.yaml
+++ b/05-condtions.yaml
@@ -1,16 +1,16 @@
+---
 - name: conditions
   hosts: localhost
   vars_prompt:
-  - name: NUMBER
-    prompt: enter the number
-    private: false
+    - name: NUMBER
+      prompt: enter the number
+      private: false
   tasks:
-  - name: print the less than number
-    ansible.builtin.debug:
-      msg: "number is less than  {{NUMBER}}"
-    when: number | int < 10 
-
-  - name: print the greater than is equal to
-    ansible.builtin.debug:
-      msg: "number is greater than equal to {{NUMBER}}"
-    when: number | int >= 10
+    - name: print the less than number
+      ansible.builtin.debug:
+        msg: number is less than  {{NUMBER}}
+      when: number | int < 10
+    - name: print the greater than is equal to
+      ansible.builtin.debug:
+        msg: number is greater than equal to {{NUMBER}}
+      when: number | int >= 10
