--- a/07-loop.yaml
+++ b/07-loop.yaml
@@ -11,6 +11,7 @@
 
 - name: install the packages
   hosts: localhost
+  become: yes
   tasks:
   - name: install packages
     ansible.builtin.debug:
