--- a/07-loop.yaml
+++ b/07-loop.yaml
@@ -29,8 +29,8 @@
   tasks:
   - name: install and remove
     ansible.builtin.dnf:
-      name: "{{ list.name }}"
-      state: "{{ list.state }}"
+      name: "{{ item.name }}"
+      state: "{{ item.state }}"
     loop:
     - { name: 'nodejs', state: 'latest' }
     - { name: 'mysql',  state: 'absent' }
